--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
              </table>
              <table>
                  <h4>Gender.</h4><tr>
-           <td><input type="radio"required > Male </td>
-          <td><input type="radio" > Female</td>
+           <td><input name="Gender" type="radio"required > Male </td>
+          <td><input name="Gender" type="radio" > Female</td>
            </tr>
        
              </table>
@@ -61,4 +61,5 @@
 </fieldset>
 </div>
 </body>
+
 </html>
