--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <H1>ABOUT</H1>
+    <button>back</button>
     <h3><p>Electric bikes (EV bikes) are becoming increasingly popular because they combine eco-friendliness, fuel savings, and modern technology. <br>These bikes run on rechargeable batteries instead of petrol, which means lower running costs and almost zero carbon emissions.<br> Most EV bikes use lithium-ion batteries that charge quickly and offer a long riding range. <br>They also require less maintenance compared to traditional bikes. <br>In today’s world, EV bikes are an excellent choice for those who want clean energy, cost efficiency, and smart mobility.
 </p></h3>
 <img src="./Blue-bike.png" alt="bike" width="400" height="400">
